--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,11 +32,16 @@ main {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ article header {
+  display: flex;
+  justify-content: space-between;
+}
 
 article.tweet {
   border: 3px solid black;
   font-size: 14px:
   border-radius: 3px;
+  margin: 20px;
   padding: 10px;
   padding-bottom: 10px;ß
 }
@@ -44,3 +49,4 @@ article.tweet {
 article.tweet:hover {
   box-shadow: 5px 5px darkcyan;
 }
+
