--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,12 +1,25 @@
 /* Nav Bar CSS */
 
-
 nav {
   /* font-family: 'Bungee', cursive; */
-  height: 1em;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 2.5em;
   background-color: FFFFF;
   color: FFFFF;
-  margin: 1.5em;
+  margin: 1em;
   z-index: 2;
   width: auto;
+}
+
+#anchor-click {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 16px;
+}
+
+#anchor-button:hover {
+  transform: translateY(3px);
 }
