--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,7 @@
 /* CSS class for new tweets */
 
 
-main section {
+section {
   background-color: #afeeee;
   /* display: box; */
   border-bottom: 3px solid black;
@@ -23,10 +23,15 @@ textarea {
 
 #tweet-button {
   background-color: #555555;
+  color: white;
   border-radius: 8px;
   border: none;
   text: white;
   font-family: bungee;
+}
+
+#tweet-button:hover {
+  transform: translateY(2px);
 }
 
 .over {
