--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,8 +2,7 @@
 
 
 section {
-  /* background-color: #afeeee; */
-  /* display: box; */
+  display: none;
   border-bottom: 3px solid black;
   padding: 10px;
   margin-bottom: 10px;
@@ -15,8 +14,6 @@ textarea {
   border: none;
   background-color: #afeeee;
 }
-
-
 
 #tweet-button {
   background-color: #555555;
